--- a/index.html
+++ b/index.html
@@ -11,6 +11,48 @@
         <title>trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
-        Trillo
+        <div class="container">
+            <header class="header">
+                <img src="img/logo.png" alt="trillo logo" class="logo">
+                <form action="" class="search">
+                    <!-- SVG stands for Scalable Vector Graphics -->
+                    <input type="text" class="search__input" placeholder="Seach hotels">
+                    <button class="search__button">
+                        <!-- 'xlink href' attribute only work for web server -->
+                        <svg class="search__icon">
+                            <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+                        </svg>
+                    </button>
+                </form>
+                <nav class="user-nav">
+                    <div class="user-nav__icon-box">
+                        <svg class="user-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-bookmark"></use>
+                        </svg>
+                        <span class="user-nav__notification">7</span>
+                    </div>
+
+                    <div class="user-nav__icon-box">
+                        <svg class="user-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-chat"></use>
+                        </svg>
+                        <span class="user-nav__notification">13</span>
+                    </div>
+                    
+                    <div class="user-nav__user">
+                        <img src="img/user.jpg" alt="User photo" class="user-nav__user-photo">
+                        <span class="user-nav__user-name">Jonas</span>
+                    </div>
+                </nav>
+            </header>
+            <div class="content">
+                <nav class="sidebar">
+                    Navigation
+                </nav>
+                <main class="hetel-view">
+                    Hotel view
+                </main>
+            </div>
+        </div>
     </body>
 </html>
