--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <nav class="sidebar">
                     Navigation
                 </nav>
-                <main class="hetel-view">
+                <main class="hotel-view">
                     Hotel view
                 </main>
             </div>
