--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="img/logo.png" alt="trillo logo" class="logo">
                 <form action="" class="search">
                     <!-- SVG stands for Scalable Vector Graphics -->
-                    <input type="text" class="search__input" placeholder="Seach hotels">
+                    <input type="text" class="search__input" placeholder="Search hotels">
                     <button class="search__button">
                         <!-- 'xlink href' attribute only work for web server -->
                         <svg class="search__icon">
