Building the layout od detail section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                             <img src="img/hotel-3.jpg" alt="Photo of hotel 3" class="gallery__photo">
                         </figure>
                     </div>
+
                     <div class="overview">
                         <h1 class="overview__heading">
                             Hotel Las Palmas
@@ -133,6 +134,16 @@
                         <div class="overview__rating">
                             <div class="overview__rating-average">8.6</div>
                             <div class="overview__rating-count">429 votes</div>
+                        </div>
+                    </div>
+
+                    <div class="detail">
+                        <div class="description">
+                            Description
+                        </div>
+
+                        <div class="user-reviews">
+                            User reviews
                         </div>
                     </div>
                 </main>
