Building user nav notication dropdown

--- a/index.html
+++ b/index.html
@@ -31,12 +31,38 @@
                         </svg>
                         <span class="user-nav__notification">7</span>
                     </div>
-
-                    <div class="user-nav__icon-box">
+                    <div class="user-nav__icon-box user-nav__icon-box--chat">
                         <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#icon-chat"></use>
                         </svg>
-                        <span class="user-nav__notification">13</span>
+                        <span class="user-nav__notification">30</span>
+                        <div class="user-nav__messages">
+                            <ul class="user-nav__message-list"></ul>
+                            <li class="user-nav__message">
+                                <a href="#" class="user-nav__message-link">
+                                    <span class="user-nav__message-name">Create new message</span>
+                                </a>
+                            </li>
+                            <li class="user-nav__message">
+                                <a href="#" class="user-nav__message-link">
+                                    <span class="user-nav__message-name">Annie</span>
+                                    <span class="user-nav__message-date">21st Sept, 9:03</span>
+                                </a>
+                            </li>
+                            <li class="user-nav__message">
+                                <a href="#" class="user-nav__message-link">
+                                    <span class="user-nav__message-name">Nick</span>
+                                    <span class="user-nav__message-date">16 Dec, 12:33</span>
+                                </a>
+                            </li>
+                            <li class="user-nav__message">
+                                <a href="#" class="user-nav__message-link">
+                                    <span class="user-nav__message-name">Maria</span>
+                                    <span class="user-nav__message-date">18 Dec, 14:53</span>
+                                </a>
+                            </li>
+                            </ul>
+                        </div>
                     </div>
                     
                     <div class="user-nav__user">
