--- a/index.html
+++ b/index.html
@@ -64,10 +64,27 @@
                             </ul>
                         </div>
                     </div>
-                    
                     <div class="user-nav__user">
-                        <img src="img/user.jpg" alt="User photo" class="user-nav__user-photo">
+                        <img srcset="img/user-small.jpg 100w, img/user.jpg 400w"
+                             sizes="(max-width: 56.25em) 30px, (max-width: 37.5em) 30px, 30px" alt="User photo"
+                             class="user-nav__user-photo" src="img/user.jpg">
                         <span class="user-nav__user-name">Jonas</span>
+                        <div class="user-nav__menu">
+                            <ul class="user-nav__list">
+                                <li class="user-nav__item">
+                                    <a href="#" class="user-nav__link">Profile</a>
+                                </li>
+                                <li class="user-nav__item">
+                                    <a href="#" class="user-nav__link">Settings</a>
+                                </li>
+                                <li class="user-nav__item">
+                                    <a href="#" class="user-nav__link">Terms</a>
+                                </li>
+                                <li class="user-nav__item">
+                                    <a href="#" class="user-nav__link">Log out</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </nav>
             </header>
