Create legal small text for copyright

--- a/index.html
+++ b/index.html
@@ -260,6 +260,11 @@
                     </div>
                 </main>
             </div>
+
+            <div class="legal-small"> <!-- Legal text for smaller screens -->
+                &copy; 2020 by trillo. All rights reserved.
+            </div>
         </div>
+
     </body>
 </html>
